# html2json

./: .npmignore  Cargo.toml  Justfile  README.md  package.json
.github/workflows/: release.yml
benches/: dom_bench.rs
examples/: hn.expected.json  hn.html  hn.json  meta.json  opengraph.json  rss.expected.json  rss.json  rss.xml
examples/js/: browser.html  example.js  example.ts
scripts/: wrapper.js
src/: dom.rs  extractor.rs  lib.rs  main.rs  parser.rs  pipe.rs  spec.rs
tests/: complex.rs
tests/fixtures/: ecommerce.html  readme_tests.html
