[package]
name = "html2json"
version = "0.4.0"
edition = "2024"
description = "HTML to JSON extractor"
authors = ["Qreta Dev <qretadev@gmail.com>"]
license = "MIT"
repository = "https://github.com/qretaio/html2json"

[[bin]]
name = "html2json"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "dom_bench"
harness = false

[features]
default = []
cli = ["dep:clap", "dep:similar"]

[dependencies]
anyhow = "1.0"
regex = "1.0"
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI-only dependencies
clap = { version = "4.0", features = ["derive"], optional = true }
similar = { version = "2.7", features = ["bytes"], optional = true }
ego-tree = "0.10.0"

[dev-dependencies]
criterion = "0.8.1"
similar-asserts = { version = "1.7", features = ["serde"] }
